Эксперименты с драйвером мотора успешны

--- a/KRUTJAK/Проект с драйвером мотора/Детали проекта/Детали проекта.md
+++ b/KRUTJAK/Проект с драйвером мотора/Детали проекта/Детали проекта.md
@@ -46,11 +46,11 @@
 
 Модуль позволяет управлять скоростью и направлением вращения коллекторных моторов с потреблением тока до 300 мА. Модуль собран на базе чипа L9110, в отличии от подобных модулей на данном чипе в нём реализована активная развязка управляющего сигнала, что позволит не нагружать выводы Arudino.
 
-#### Скетч изменения направления вращения
+#### [Скетч изменения направления вращения](izmenenie-napravleniya-vrashcheniya/izmenenie-napravleniya-vrashcheniya.ino)
 
 В данном примере мотор будет вращаться сначала в одну сторону с максимальной скоростью в течении двух секунд, затем остановится на одну секунду и начнёт вращаться в другую.
 
-#### Скетч плавного старта
+#### [Скетч плавного старта](plavnyj-start/plavnyj-start.ino)
 
 В данном примере мотор будет плавно набирать скорость вращения, а затем так же плавно останавливаться.
 
